# desktop-moodbot

./: .gitignore  CLAUDE.md  DESIGN_BRIEF.md  Dockerfile  LICENSE  README.md  __main__.py  battery-test.md  docker-compose.yml  pyproject.toml  sprite-ideas.md
core/: sentiment.py  signals.py  state.py
firmware/: patch_gpio1.py  platformio.ini
firmware/include/: config.h.example  version.h
firmware/src/: main.cpp
hardware/: dimensions.json
hardware/enclosures/: dtmb_enclosure_v1.scad  dtmb_enclosure_v1.stl  dtmb_enclosure_v2.scad  dtmb_enclosure_v2.stl  dtmb_enclosure_v3.scad  dtmb_enclosure_v3.stl
hardware/reference/: coreink_reference.scad  coreink_reference.stl
parsers/: base.py  claude_code.py  opencode.py
server/: app.py
sprites/: SPRITE_SPEC.md  assets  encoder.py  manifest.py
sprites/tools/: convert_to_1bit.py
sprites/tools/preview/: index.html
tests/: test_claude_code_parser.py  test_encoder.py  test_manifest.py  test_opencode_parser.py  test_sentiment.py  test_server.py  test_signals.py  test_state.py  test_watcher.py
tools/: sync-dimensions.js
tools/3d-preview/: index.html
tools/sprite-editor/: generate-baseline.js  index.html  preview.html  render-sprites.py  render-theme-a.py  render-theme-b.py  sprites-data.js
tools/sprite-editor/sprites/: conversing_elated_0.json  conversing_negative_0.json  conversing_neutral_0.json  conversing_neutral_1.json  conversing_neutral_2.json  conversing_neutral_3.json  conversing_positive_0.json  conversing_positive_1.json  conversing_positive_2.json  conversing_positive_3.json  (+63 more)
watcher/: monitor.py
